Attempt to turn off line numbers in code blocks

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,10 @@ description: Distributed systems toolkit for RDMA
 google_analytics: 
 show_downloads: false
 theme: jekyll-theme-time-machine
+github:
+    repository_url: https://github.com/Derecho-Project/derecho-unified
+redcarpet:
+    line_numbers: false
 
 gems:
   - jekyll-mentions
